OTT credentials for VMs